# teslasynth

./: .ccls  .clang-format  .copywrite.hcl  .gitignore  404.html  CMakeLists.txt  CNAME  README.md  catalog.json  coi-serviceworker.js  eslint.config.js  flake.nix  generate_dotclangd.py  generate_manifest.py  index.html  manifest.webmanifest  package.json  partitions.csv  patch_compile_commands.py  platformio.ini  pnpm-lock.yaml  pnpm-workspace.yaml  sdkconfig.c3-super-mini  sdkconfig.cyd  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s2  sdkconfig.defaults.esp32s3  sdkconfig.esp32  sdkconfig.esp32dev  sdkconfig.lilygo-display  sdkconfig.lolin32  sdkconfig.s2-mini  sdkconfig.s3  shell.nix  sw.js
.github/workflows/: ci.yml
assets/: index-4yK16GMl.js  index-5VA_J6pN.js  index-95mLFwUD.css  index-B1yJ5C3s.js  index-BEHhB9Ja.js  index-BEkW-f-4.js  index-BG-bc6yN.css  index-BQteotQc.js  index-BkAM3inB.js  index-BkUWwwJS.js  index-BphjP4Mr.js  index-Bsby-ozO.js  index-C7buNB25.css  index-CH7iFiEh.js  index-CIVEy5Ib.js  index-CKBU_u_D.js  index-CV4DMjdj.css  index-CXSPEckl.js  index-C_dkBz7H.js  index-Cd18d6m9.js  index-CqQEtdXa.js  index-CtJibgu5.js  index-D7Jx-CQz.js  index-D8wNIafN.css  index-DAi6I7Oy.js  index-DD0J0orw.js  index-DTeSB6tx.js  index-D_3DjKzM.css  index-D_NViI31.js  index-Dkw0VxiP.js  index-DvklhUp5.js  index-J4eO5m9B.css  index-MC9pQZoq.js  index-fUQ04eax.js  index-fvBYzJWR.js  index-pm75l0Dn.js  index-xZqx5dMA.js  index-zvnsYn90.js  install-dialog-0Nk9igvq.js  install-dialog-BB7SLWdT.js  (+24 more)
dashboard/: SynthConfigSection.jsx  generate.js  package-lock.json  package.json
dashboard/src/: App.jsx  Logo.jsx  SynthConfigSection.jsx  SysInfo.jsx  components.jsx  main.jsx
dashboard/src/components/: BooleanIndicator.jsx  DisplayConfig.jsx  GpioInput.jsx  HardwareConfigForm.jsx  InputConfig.jsx  InstrumentSelect.jsx  LEDConfig.jsx  NumberInput.jsx  OutputConfig.jsx  RoutingConfigSection.jsx  confirmation.jsx  modal.jsx
dashboard/src/styles/: style.scss
docs/: cli.md
lib/app/: CMakeLists.txt  application.hpp  events.cpp  idf_component.yml  storage.cpp  synthesizer.cpp  synthesizer_events.hpp  teslasynth.hpp
lib/app/cli/: repl.cpp
lib/app/cli/commands/: configurations.cpp  instruments.cpp  system.cpp
lib/app/configuration/: codec.cpp  codec.hpp  factory_settings.cpp  hardware.cpp  hardware.hpp  storage.hpp  synth.cpp  synth.hpp
lib/app/devices/: display.cpp  display.hpp  midi.cpp  midi.hpp  signal_led.cpp  signal_led.hpp  wifi.cpp  wifi.hpp
lib/app/devices/midi/: ble.cpp  usb.cpp
lib/app/gui/: components.hpp  full.cpp  hardware.h  setup.hpp  status_panel.cpp
lib/app/gui/menus/: configuration.cpp  home.cpp
lib/app/helpers/: json.cpp  json.hpp  maintenance.cpp  maintenance.hpp  sysinfo.cpp  sysinfo.h
lib/app/input/: ble_midi.cpp  ble_midi2.cpp
lib/app/output/: rmt_driver.cpp  rmt_driver.hpp
lib/app/web/: server.cpp  server.hpp
lib/midi/: CMakeLists.txt  midi_core.hpp  midi_parser.hpp  parser.cpp  receiver.hpp
lib/synthesizer/: CMakeLists.txt  audio.hpp  channel_state.hpp  core.hpp  curve.cpp  curve.hpp  envelope.cpp  envelope.hpp  instruments.hpp  lfo.cpp  lfo.hpp  note.cpp  note.hpp  notes.hpp  percussion.cpp  percussion.hpp  pitchbend.hpp  presets.hpp  pulse.hpp  synth.cpp  synth.hpp  voice.hpp  voice_event.cpp  voice_event.hpp
lib/synthesizer/bank/: percussions.hpp
lib/synthesizer/core/: duration.hpp  envelope_level.hpp  functions.hpp  hertz.hpp  probability.hpp
lib/synthesizer/voices/: hit.cpp  hit.hpp  note.cpp  note.hpp
lib/teslasynth/: CMakeLists.txt  channel_mapping.hpp  config_data.hpp  config_parser.cpp  config_parser.hpp  config_patch_update.cpp  config_patch_update.hpp  midi_synth.hpp  result.hpp
main/: CMakeLists.txt  Kconfig.projbuild  main.cpp
parts/: README.md  teslasynth.FCStd
python/: .copywrite.hcl  CMakeLists.txt  README.md  flake.nix  pyproject.toml
python/src/: bindings.cpp
python/teslasynth/: __init__.py  __main__.py  _types.py  config.py  midi.py  plot.py  render.py  wav.py
python/tests/: __init__.py  conftest.py  test_bindings.py  test_cli.py  test_config.py  test_midi.py  test_plot_helpers.py  test_recording.py  test_render.py  test_wav.py
src/: CMakeLists.txt  Kconfig.projbuild  app.cpp  app.hpp  application.hpp  ble-midi.c  ble-midi.h  cli.hpp  display.hpp  encoder.c  example.c  example.h  idf_component.yml  main.cpp  storage.cpp  synth_config.cpp  synth_config.hpp  synthesizer.cpp  synthesizer_events.hpp  teslasynth.hpp
src/cli/: commands.h  repl.cpp
src/cli/commands/: configurations.cpp  system.cpp
src/configuration/: synth.cpp  synth.hpp
src/display/: ssd1306.cpp
src/gui/: display.cpp  full.cpp  hardware.h  lcd_panel.cpp  ssd1306.cpp  status_panel.cpp  text.cpp
src/gui/media/: 128x64.h
src/gui/menus/: about.cpp  configuration.cpp  home.cpp
src/helpers/: sysinfo.cpp
src/input/: ble_midi.cpp  ble_midi.hpp
src/output/: rmt_driver.cpp
test/app/test_config/: main.cpp
test/midi/test_core/: main.cpp
test/midi/test_parser/: main.cpp
test/synthesizer/helpers/: assertions.hpp
test/synthesizer/test_core/: main.cpp
test/synthesizer/test_curve/: main.cpp
test/synthesizer/test_envelope/: main.cpp
test/synthesizer/test_hit/: main.cpp
test/synthesizer/test_lfo/: main.cpp
test/synthesizer/test_note/: main.cpp
test/synthesizer/test_notes/: main.cpp
test/synthesizer/test_pitchbend/: main.cpp
test/synthesizer/test_values/: main.cpp
test/synthesizer/test_voice/: main.cpp
test/synthesizer/test_voice_event/: main.cpp
test/teslasynth/test_channel_mapping/: main.cpp
test/teslasynth/test_config_parser/: main.cpp
test/teslasynth/test_config_patch/: main.cpp
test/teslasynth/test_duty_limiter/: main.cpp
test/teslasynth/test_midi_synth/: main.cpp
v0.4.1/: manifest.json
v0.4.2/: manifest.json
v0.4.3/: manifest.json
v0.5.0/: manifest.json
v0.5.1/: manifest.json
v0.5.2/: manifest.json
v0.5.3/: manifest.json
v0.5.4/: manifest.json
v0.5.5/: manifest.json
v0.6.0/: manifest.json
v0.6.1/: manifest.json
web/apps/site/: index.html  (+2 more)
(+70 files in other folders)
