[build-system]
requires = ["scikit-build-core>=0.9", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "teslasynth"
version = "0.1.0"
description = "Python bindings and analysis tools for the teslasynth firmware"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21",
    "mido>=1.3",
]

[project.optional-dependencies]
plot = ["plotly>=5.0"]
wav  = ["scipy>=1.7"]

[dependency-groups]
dev = ["plotly>=5.0", "scipy>=1.7", "jupyter"]

[project.scripts]
teslasynth = "teslasynth.__main__:main"

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["teslasynth"]
