[build-system]
requires = ["scikit-build-core>=0.9", "nanobind>=2.0", "setuptools_scm>=8"]
build-backend = "scikit_build_core.build"

[project]
name = "teslasynth"
dynamic = ["version"]
description = "Python bindings and analysis tools for the teslasynth firmware"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [
    { name = "Hossein Naderi" },
]
keywords = [
    "midi", "synthesizer", "audio", "music",
    "esp32", "embedded", "firmware",
    "tesla-coil", "flyback", "interrupter", "high-voltage", "laser",
    "pulse", "waveform", "signal",
]
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21",
    "mido>=1.3",
]

[project.urls]
Homepage      = "http://projects.hnaderi.dev/teslasynth/"
Documentation = "http://projects.hnaderi.dev/teslasynth/python"
Repository    = "https://github.com/hnaderi/teslasynth"
"Bug Tracker" = "https://github.com/hnaderi/teslasynth/issues"

[project.optional-dependencies]
plot = ["plotly>=5.0"]
wav  = ["soundfile>=0.12"]

[dependency-groups]
dev = ["plotly>=5.0", "jupyter", "pytest>=8.0", "ruff>=0.1", "soundfile>=0.12"]

[project.scripts]
teslasynth = "teslasynth.__main__:main"

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["teslasynth"]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
root = ".."
fallback_version = "0.0.0.dev0"

[tool.uv.extra-build-dependencies]
teslasynth = ["setuptools_scm>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
# Usage examples in the module docstring cannot be wrapped
"teslasynth/__main__.py" = ["E501"]

# ── cibuildwheel ──────────────────────────────────────────────────────────────
# Run from repo root with: cibuildwheel --package-dir python
# The full checkout is available so CMakeLists.txt can reach ../lib naturally.
[tool.cibuildwheel]
build = ["cp39-*", "cp310-*", "cp311-*", "cp312-*", "cp313-*"]
# 32-bit and musl targets are not worth the effort for this library
skip  = ["*-win32", "*-manylinux_i686", "*-musllinux*"]
# After installing the wheel, run the test suite
test-requires = ["pytest>=8.0", "mido>=1.3"]
test-command  = "pytest {package}/tests -v --tb=short"

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]
# manylinux_2_28 ships GCC 11 → full C++17 support required by nanobind
manylinux-x86_64-image  = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
environment = {MACOSX_DEPLOYMENT_TARGET = "10.13"}

[tool.cibuildwheel.windows]
archs = ["AMD64"]
